--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -8,6 +8,13 @@
     <fragment
             android:id="@+id/titleFragment"
             android:name="com.example.musicapp.screens.titleFragment.TitleFragment"
-            android:label="fragment_title"
-            tools:layout="@layout/fragment_title" />
+            tools:layout="@layout/fragment_title" >
+        <action
+                android:id="@+id/action_titleFragment_to_playerFragment"
+                app:destination="@id/playerFragment" />
+    </fragment>
+    <fragment
+            android:id="@+id/playerFragment"
+            android:name="com.example.musicapp.screens.playerFragment.PlayerFragment"
+            tools:layout="@layout/fragment_player" />
 </navigation>
