--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -2,9 +2,11 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:padding="10dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        >
 
     <ImageView
             android:layout_width="wrap_content"
@@ -20,6 +22,7 @@
 
     <TextView
             android:id="@+id/time_text"
+            android:textColor="@color/gray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
@@ -32,6 +35,7 @@
     <TextView
             android:id="@+id/playList_name"
             android:layout_width="wrap_content"
+            android:textColor="@color/gray"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="Плейлист 1"
@@ -50,20 +54,22 @@
             android:background="@color/white"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.272"
             tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="308dp" />
+            android:layout_marginStart="304dp"
+            app:layout_constraintVertical_bias="0.454" />
 
     <TextView
             android:id="@+id/proportion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="1"
+            android:text="@string/_1"
+            android:textColor="@color/gray"
             app:layout_constraintStart_toEndOf="@+id/button_left"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.36" />
+            app:layout_constraintVertical_bias="0.4"
+            android:layout_marginStart="8dp" />
 
     <ImageButton
             android:id="@+id/button_right"
@@ -75,6 +81,7 @@
             app:layout_constraintStart_toEndOf="@+id/proportion"
             app:layout_constraintBottom_toBottomOf="parent"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
-            app:layout_constraintVertical_bias="0.0" />
+            app:layout_constraintVertical_bias="0.409"
+            android:layout_marginStart="8dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
