--- a/app/src/main/res/layout/day_item.xml
+++ b/app/src/main/res/layout/day_item.xml
@@ -2,86 +2,87 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
-        android:paddingTop="8dp"
-        android:paddingBottom="8dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
     <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_error"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
             android:id="@+id/error_view"
             android:visibility="invisible"
-            tools:visibility="visible" />
+            tools:visibility="visible"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/time_text"
+            app:layout_constraintHorizontal_chainStyle="spread"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
             android:id="@+id/time_text"
             android:textColor="@color/gray"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="14:30-15:20"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.36"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="48dp" />
+            app:layout_constraintStart_toEndOf="@+id/error_view"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/playList_name"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     <TextView
             android:id="@+id/playList_name"
             android:layout_width="wrap_content"
             android:textColor="@color/gray"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             tools:text="Плейлист 1"
-
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.4"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.562" />
+            app:layout_constraintStart_toEndOf="@+id/time_text"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/button_left"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent" />
 
     <ImageButton
             android:id="@+id/button_left"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:src="@drawable/ic_arrow_left"
             android:background="@color/white"
+            app:layout_constraintStart_toEndOf="@+id/playList_name"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/proportion"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="304dp"
-            app:layout_constraintVertical_bias="0.454" />
+            app:layout_constraintVertical_bias="0.888" />
 
     <TextView
             android:id="@+id/proportion"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
             android:text="@string/_1"
             android:textColor="@color/gray"
             app:layout_constraintStart_toEndOf="@+id/button_left"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toStartOf="@+id/button_right"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintVertical_bias="0.4"
-            android:layout_marginStart="8dp" />
+            app:layout_constraintVertical_bias="0.488" />
 
     <ImageButton
             android:id="@+id/button_right"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
             android:src="@drawable/ic_arrow_right"
             android:background="@color/white"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/proportion"
-            app:layout_constraintBottom_toBottomOf="parent"
             tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
-            app:layout_constraintVertical_bias="0.409"
-            android:layout_marginStart="8dp" />
+            app:layout_constraintStart_toEndOf="@+id/proportion"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintVertical_bias="0.388" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
