--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -16,9 +16,5 @@
     <fragment
             android:id="@+id/playerFragment"
             android:name="com.example.musicapp.screens.playerFragment.PlayerFragment"
-            tools:layout="@layout/fragment_player" >
-        <argument
-                android:name="schedule"
-                app:argType="com.example.musicapp.network.musicProfile.Schedule" />
-    </fragment>
+            tools:layout="@layout/fragment_player" />
 </navigation>
