--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/titleFragment"
-            android:name="com.example.musicapp.screens.titleFragment.TitleFragment"
+            android:name="com.example.musicapp.presentation.titleFragment.TitleFragment"
             tools:layout="@layout/fragment_title" >
         <action
                 android:id="@+id/action_titleFragment_to_playerFragment"
@@ -15,6 +15,6 @@
     </fragment>
     <fragment
             android:id="@+id/playerFragment"
-            android:name="com.example.musicapp.screens.playerFragment.PlayerFragment"
+            android:name="com.example.musicapp.presentation.playerFragment.PlayerFragment"
             tools:layout="@layout/fragment_player" />
 </navigation>
